--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
 }
 
 /* Temas */
-body.light-theme {
+body.bw-theme {
     background-color: var(--light-bg);
     color: var(--light-text);
 }
